--- a/SBMS_SpringMVC_StudentRegistration_App-01/src/main/resources/application.properties
+++ b/SBMS_SpringMVC_StudentRegistration_App-01/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=SBMS_SpringMVC_StudentRegistration_App-01
-#Web MVC Configurations
+#View Resolver
 server.port=9090
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
